<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".Presentation.AccountChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.Termsetter.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/header_change_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_change_password_prompt1"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Termsetter.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:inputType="textPassword"
                android:hint="Current password"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_https_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCurrentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/changePasswordTxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/txt_change_password_prompt2"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Termsetter.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:inputType="textPassword"
                app:helperTextEnabled="true"
                app:helperText="Min 6 characters, must include at least 1 letter and number"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_https_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/txt_change_password_prompt3"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Termsetter.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:inputType="textPassword"
                app:helperTextEnabled="true"
                app:helperText="Must match above password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"

                app:startIconDrawable="@drawable/ic_baseline_https_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Termsetter.TextButton.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/buttonConfirmPassword"
                    android:onClick="passwordBackToAccountMenu"
                    android:text="◀ Account Menu"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Termsetter.ConfirmButton"
                    android:id="@+id/buttonConfirmPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:onClick="onClickConfirmButton"
                    android:text="@string/btn_change_password_confirm"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>