...
            android:text="@string/btn_account_management_manage_profile"
            app:icon="@drawable/ic_baseline_person_24"
            tools:layout_editor_absoluteX="1dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Termsetter.MenuButton"
            android:id="@+id/buttonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="openChangePassword"
            android:text="@string/btn_account_management_change_password"
            app:icon="@drawable/ic_baseline_https_24"
...
            android:onClick="openUpdateEmail"
            android:text="@string/btn_account_management_update_email"
            app:icon="@drawable/ic_baseline_mail_outline_24"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Termsetter.TextButton.Large"
            android:id="@+id/buttonReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:onClick="accountBackToMainMenu"
            android:text="◀ Home"/>
...
