...
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/header_main"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Termsetter.MenuButton"
            android:id="@+id/homeManageAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:onClick="openAccountManagementMenu"
            android:text="@string/btn_main_manage_account"/>
...
            android:layout_marginTop="24dp"
            android:onClick="openUnenrollmentView"
            android:text="@string/btn_main_unenroll" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Termsetter.TextButton.Large"
            android:id="@+id/homeLogoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:onClick="onClickLogOutButton"
            android:text="@string/btn_main_logout"/>
...
